# libtrustymatter

./: CMakeLists.txt  SCR_meta_matter.txt
libtrusty/: trusty.c
libtrusty/include/trusty/: ipc.h
matter_client/: matter_messages.cpp  serializable.cpp  trusty_matter.cpp  trusty_matter_ipc.cpp
matter_client/include/: Timers.h  UniquePtr.h  matter_defs.h  matter_ipc.h  matter_messages.h  mem.h  serializable.h  trusty_matter.h  trusty_matter_ipc.h
storage/: checkpoint_handling.cpp  proxy.c  rpmb.c  storage.c  storageproxyd.service
storage/include/: ipc.h  log.h  rpmb.h  storage.h
